	* mi/mipolycon.c:
	* mi/mipolypnt.c:
	* mi/mipolyrect.c:
	* mi/mipolyseg.c:
	* mi/mipolytext.c:
	* mi/mipushpxl.c:
	* mi/miregion.c:
	* mi/miscrinit.c:
	* mi/misprite.c:
	* mi/mivaltree.c:
	* mi/miwideline.c:
	* mi/miwindow.c:
	* mi/mizerarc.c:
	* mi/mizerclip.c:
	* mi/mizerline.c:
	* miext/cw/cw.c:
	* miext/damage/damage.c:
	* render/miglyph.c:
	Mark everything in misym.c as _X_EXPORT.

2006-02-15  Kristian Høgsberg  <krh@redhat.com>

	* GL/symlink-mesa.sh: 
	* GL/mesa/swrast/Makefile.am: 
	Update to build against Mesa trunk.

2006-02-14  Eric Anholt  <anholt@FreeBSD.org>

	* hw/kdrive/mga/mgadraw.c: (mgaDrawDisable):
	* hw/kdrive/src/kdrive.c: (KdDisableScreen):
	Remove the waitSync from KdDisableScreen and push it off to drivers'
	disableAccel hook, which is more correct anyway.  This makes kdrive.c
	not have any knowledge of kaa, opening the way for using exa from
	kdrive.

2006-02-14  Eric Anholt  <anholt@FreeBSD.org>

	* GL/mesa/shader/slang/Makefile.am:
	Avoid some more libcwrapper damage that prevented kdrive linking.

2006-02-14  Benjamin Herrenschmidt <benh@kernel.crashing.org>

	* hw/xfree86/dri/dri.c: (DRIGetSecs):
	DRIGetSecs() would call getsecs() when XFree86LOADER is defined,
	relying on the wrappers to provide it. Wrapper gone, and getsecs
	doesn't exist on linux so it now blows up. Fixes it by just calling
	gettimeofday() in all cases instead.

2006-02-14  Benjamin Herrenschmidt <benh@kernel.crashing.org>

	* fb/fbbits.h:
	Remove useless line of code that contained a bug and triggered a
	gcc warning. This variable will be overriden before being used
	anyway. (Bugzilla #5595)

2006-02-14  Alan Hourihane  <alanh@fairlite.demon.co.uk>

	* hw/xfree86/dixmods/shmodule.c:
	Bump shadow module version number to 1.1.0 from 1.0.0

2006-02-13  Adam Jackson  <ajax@freedesktop.org>

	* render/picture.c:
	Further op reduction when both src and dst alpha are absent.
	(Reverted)

2006-02-13  Benjamin Herrenschmidt <benh@kernel.crashing.org>
