@@ -76,10 +76,10 @@ static unsigned char PanoramiXReqCode = 0;
 
 int 		PanoramiXPixWidth = 0;
 int 		PanoramiXPixHeight = 0;
-int 		PanoramiXNumScreens = 0;
+_X_EXPORT int 	PanoramiXNumScreens = 0;
 
-PanoramiXData 	*panoramiXdataPtr = NULL;
-RegionRec   	PanoramiXScreenRegion = {{0, 0, 0, 0}, NULL};
+_X_EXPORT PanoramiXData *panoramiXdataPtr = NULL;
+RegionRec   		PanoramiXScreenRegion = {{0, 0, 0, 0}, NULL};
 
 static int		PanoramiXNumDepths;
 static DepthPtr		PanoramiXDepths;
@@ -87,13 +87,13 @@ static int		PanoramiXNumVisuals;
 static VisualPtr	PanoramiXVisuals;
 
 /* We support at most 256 visuals */
-XID		*PanoramiXVisualTable = NULL;
+_X_EXPORT XID		*PanoramiXVisualTable = NULL;
 
-unsigned long XRC_DRAWABLE;
-unsigned long XRT_WINDOW;
-unsigned long XRT_PIXMAP;
-unsigned long XRT_GC;
-unsigned long XRT_COLORMAP;
+_X_EXPORT unsigned long XRC_DRAWABLE;
+_X_EXPORT unsigned long XRT_WINDOW;
+_X_EXPORT unsigned long XRT_PIXMAP;
+_X_EXPORT unsigned long XRT_GC;
+_X_EXPORT unsigned long XRT_COLORMAP;
 
 /*
  *	Function prototypes
@@ -334,7 +334,7 @@ XineramaDestroyClip(GCPtr pGC)
 
 
 
-int
+_X_EXPORT int
 XineramaDeleteResource(pointer data, XID id)
 {
     xfree(data);
@@ -415,7 +415,7 @@ typedef struct _connect_callback_list {
 
 static XineramaConnectionCallbackList *ConnectionCallbackList = NULL;
 
-Bool
+_X_EXPORT Bool
 XineramaRegisterConnectionBlockCallback(void (*func)(void))
 {
     XineramaConnectionCallbackList *newlist;
